--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "catalysts",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.13",
-    "@tanstack/react-router": "^1.131.49",
-    "@tanstack/react-router-devtools": "^1.131.49",
-    "@tanstack/router-plugin": "^1.131.49",
-    "framer-motion": "^12.23.22",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-intersection-observer": "^9.16.0",
-    "tailwindcss": "^4.1.13"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.35.0",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react-swc": "^4.0.1",
-    "eslint": "^9.35.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.4.0",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.43.0",
-    "vite": "^7.1.6"
-  }
+	"name": "Catalyst",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.1.13",
+		"@tanstack/react-router": "^1.131.49",
+		"@tanstack/react-router-devtools": "^1.131.49",
+		"@tanstack/router-plugin": "^1.131.49",
+		"framer-motion": "^12.23.22",
+		"react": "^19.1.1",
+		"react-dom": "^19.1.1",
+		"react-intersection-observer": "^9.16.0",
+		"tailwindcss": "^4.1.13"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.35.0",
+		"@types/react": "^19.1.13",
+		"@types/react-dom": "^19.1.9",
+		"@vitejs/plugin-react-swc": "^4.0.1",
+		"eslint": "^9.35.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.20",
+		"globals": "^16.4.0",
+		"typescript": "~5.8.3",
+		"typescript-eslint": "^8.43.0",
+		"vite": "^7.1.6"
+	}
 }
